--- a/DockerFile
+++ b/DockerFile
@@ -1,15 +1,16 @@
-FROM python:3.18-alpine
+FROM python:3.12-alpine
 
-RUN apk add --no--cache python3-dev \
-    && pip3 install --upgrade pip
+ENV FLASK_APP regalias/src/app.py
+ENV FLASK_RUN_HOST 0.0.0.0
 
 WORKDIR /regalias
 
+RUN apk add --no-cache gcc musl-dev linux-headers
+
 COPY requirements.txt ./
+
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . /regalias
-
-RUN pip3 --no-cache-dir install -r requirements.txt
+COPY . ./regalias
 
 CMD ["flask", "run"]
