--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 venv/
 .env
+__pycache__/
+src/__pycache__/
+src/controllers/__pycache__/
+src/db/__pycache__/
+src/models/__pycache__/
+src/mqtt/__pycache__/
+src/routes/__pycache__/
+src/services/__pycache__/
