--- a/nginx.conf
+++ b/nginx.conf
@@ -3,9 +3,10 @@ events {}
 http {
     server {
         listen 80;
+        server_name 181.215.197.15;
 
         location / {
-            proxy_pass http://localhost:4000;
+            proxy_pass api-regalias:4000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
