--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ http {
         server_name 181.215.197.15;
 
         location / {
-            proxy_pass api-regalias:4000;
+            proxy_pass http://api-regalias:4000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
