--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 
 networks:
   main:
@@ -29,7 +29,7 @@ services:
       - "18083:18083"
     networks:
       - main
-  
+
   api-regalias:
     image: regalias-img
     environment:
@@ -52,9 +52,18 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./certbot/www/:/var/www/certbot/:ro
     depends_on:
       - api-regalias
     networks:
       - main
 
-    
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
+    depends_on:
+      - nginx
+    networks:
+      - main
