--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,33 @@
-events {}
+stream {
+    upstream mqtt_servers {
+        server emqx:1883;
+    }
+
+    server {
+        listen 8883 ssl;
+
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+        ssl_certificate /etc/nginx/ssl/live/hpc.unicartagena.edu.co/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/live/hpc.unicartagena.edu.co/privkey.pem;
+        ssl_verify_depth 2;
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        proxy_pass mqtt_servers;
+
+        tcp_nodelay on;
+    }
+}
 
 http {
     server {
         listen 80;
-        server_name 181.215.197.15;
+        server_name hpc.unicartagena.edu.co;
+
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
 
         location / {
             proxy_pass http://api-regalias:4000;
@@ -13,4 +37,5 @@ http {
         }
     }
 }
+
 
