--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,9 @@ services:
       - main
 
   api-regalias:
-    image: regalias-img
+    build: 
+      context: .
+      dockerfile: Dockerfile
     environment:
       DB_HOST: postgres
       DB_NAME: regalias
